--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="examuncle.html">
-                  <figure class="cc-effect"><img src="images/ExamUncle.png" alt="Image"  />
+                  <figure class="cc-effect"><img src="images/ExamUncle.PNG" alt="Image"  />
                     <figcaption>
                       <div class="h4">Codex 2019 Winner</div>
                       <p>Web Development</p>
@@ -371,14 +371,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="fooduncle.html">
-                  <figure class="cc-effect"><img src="images/Food Uncle.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Food Uncle.PNG" alt="Image"/>
                     <figcaption>
                       <div class="h4">Codex 2018 Winner</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="hireuncle.html">
-                  <figure class="cc-effect"><img src="images/Hire uncle.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Hire uncle.PNG" alt="Image"/>
                     <figcaption>
                       <div class="h4">Website Development 2018 Winner</div>
                       <p>Web Development</p>
