--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><center><img src="images/independence day.png" alt="Image" height="400"/></center>
+                  <figure class="cc-effect"><center><img src="images/rakshabandhan.jpg" alt="Image" height="400"/></center>
                     <figcaption>
                       <div class="h4">Independence Day</div>
                       <p>Greeting Card Making Competition</p>
