--- a/examuncle.html
+++ b/examuncle.html
@@ -126,7 +126,7 @@
 
 <header  class="head" style="padding:50px 0px 0px 0px">
 	
-	<img src="examuncle/img/exambanner.png" alt="banner" height='300px' width='1700px'>
+	<img src="examuncle/img/exambanner.PNG" alt="banner" height='300px' width='1700px'>
     
 </header>
 <noscript>
