--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="section">
         <div class="container">
           <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="devicon-facebook-plain"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="devicon-twitter-plain"></i></a>
-          <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Github"><i class="devicon-github-plain"></i>Hello</a>	
+          <a class="btn btn-default " href="#" rel="tooltip" title="Follow me on Github"><i class="devicon-github-plain"></i></a>	
           	
 
         </div>
