--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Sahutronics Home Automtion Device</div>
-            <p>This is capable of controlling your home’s AC appliances.By this device you can control four devices at a time. This Device is Alexa Enabled, means you can control your device with voice.</p>
+            <p>This is capable of controlling your homeâ€™s AC appliances.By this device you can control four devices at a time. This Device is Alexa Enabled, means you can control your device with voice.</p>
           </div>
         </div>
       </div>
@@ -198,7 +198,7 @@
           <div class="card-body">
             <div class="h5">Exam Uncle : Online Exam Portal</div>
             <p>
-            	ExamUncle is the India’s most popular online test portal, Which will help you to prepare for your upcoming competitive exams. ExamUncle with the experience of many years provides you the best and quality questions/Tests with the detailed report for your performance. Not only this you can retake the test and compare the performance with your previous attempts.
+            	ExamUncle is the Indiaâ€™s most popular online test portal, Which will help you to prepare for your upcoming competitive exams. ExamUncle with the experience of many years provides you the best and quality questions/Tests with the detailed report for your performance. Not only this you can retake the test and compare the performance with your previous attempts.
             </p>
           </div>
         </div>
