--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="examuncle.html">
-                  <figure class="cc-effect"><img src="images/ExamUncle.png" alt="Image"  />
+                  <figure class="cc-effect"><img src="images/ExamUncle.PNG" alt="Image"  />
                     <figcaption>
                       <div class="h4">Codex 2019 Winner</div>
                       <p>Web Development</p>
@@ -350,14 +350,14 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="fooduncle.html">
-                  <figure class="cc-effect"><img src="images/Food Uncle.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Food Uncle.PNG" alt="Image"/>
                     <figcaption>
                       <div class="h4">Codex 2018 Winner</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="hireuncle.html">
-                  <figure class="cc-effect"><img src="images/Hire uncle.png" alt="Image"/>
+                  <figure class="cc-effect"><img src="images/Hire uncle.PNG" alt="Image"/>
                     <figcaption>
                       <div class="h4">Website Development 2018 Winner</div>
                       <p>Web Development</p>
@@ -379,7 +379,7 @@
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
-                  <figure class="cc-effect"><center><img  src="images/Shivamogga.png" alt="Image"height =300/></center>
+                  <figure class="cc-effect"><center><img  src="images/Shivamogga.PNG" alt="Image"height =300/></center>
                     <figcaption>
                       <div class="h4">Shivmoga SmartCity Logo</div>
                       <p>Logo Designing Competition</p>
@@ -410,7 +410,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><center><img src="images/Raksha bandhan.png" alt="Image" height="400"/></center>
+                  <figure class="cc-effect"><center><img src="images/rakshabandhan.jpg" alt="Image" height="400"/></center>
                     <figcaption>
                       <div class="h4">Raksha Bandhan Greeting</div>
                       <p>Greeting Card Making Competition</p>
