--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>March 2019</p>
-            <div class="h5">STHAD</div>
+            <div class="h5">Home Automation Device</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
