--- a/fooduncle.html
+++ b/fooduncle.html
@@ -251,7 +251,9 @@ p
 															</div>
 															<br>
 															<div class="sbox">
+																<center>
 															<button type="submit" name="submit"  class="btn" style="width:30%;">Go </button>  <button type="reset" name="reset"  class="btn" style="width:30%;" >   Reset </button> 
+																</center>
 															</div>
 															<br><br>
 														</div>
