--- a/index.html
+++ b/index.html
@@ -164,6 +164,24 @@
         </div>
       </div>
     </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            
+            <div class="h5">Amazon Developer</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Amazon Alexa Skill Developer</div>
+            <p>
+            	Created and Hosted more than 5 skills on Amazon Alexa Skill Store India.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
    
   </div>
 </div>
