--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
-                  <figure class="cc-effect"><center><img src="images/logo222.png" alt="Image" height='268'/></center>
+                  <figure class="cc-effect"><center><img src="images/sahutronics.png" alt="Image" height='268'/></center>
                     <figcaption>
                       <div class="h4">Sahutronics</div>
                       <p>Invent-Inspire-Innovate</p>
