--- a/index.html
+++ b/index.html
@@ -168,6 +168,25 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
+            <p>March 2019</p>
+            <div class="h5">Techkriti'19<br>IIT-Kanpur</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Manoeuvre-Winner</div>
+            <p>
+            	We secured second position in the event Manoeuvre organised by IIT-Kanpur in there technical fest Techkriti'19. We were the team of five in which i was appointed as the team leader.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+	  
+	  <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
             <p></p>
             <div class="h5">Google Assistant</div>
           </div>
