--- a/index.html
+++ b/index.html
@@ -441,6 +441,13 @@
                       <p>Logo Designing Competition</p>
                     </figcaption>
                   </figure></a></div>
+		 <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><center><img  src="images/logo2git.png" alt="Image"height =300/></center>
+                    <figcaption>
+                      <div class="h4">Sahutronics Logo</div>
+                      <p>Logo</p>
+                    </figcaption>
+                  </figure></a></div>
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
