--- a/index.html
+++ b/index.html
@@ -448,6 +448,13 @@
                       <p>Logo</p>
                     </figcaption>
                   </figure></a></div>
+		    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><center><img src="images/hcc.png" alt="Image" height =300/></center>
+                    <figcaption>
+                      <div class="h4">Harsh Vardhan Cricket Club</div>
+                      <p>Logo</p>
+                    </figcaption>
+                  </figure></a></div>
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
@@ -455,6 +462,13 @@
                     <figcaption>
                       <div class="h4">DoorDarshan Logo</div>
                       <p>Logo Designing Competition</p>
+                    </figcaption>
+                  </figure></a></div>
+		    <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+                  <figure class="cc-effect"><center><img src="images/Logo123.png" alt="Image" height =300/></center>
+                    <figcaption>
+                      <div class="h4">Kidzee Harsh Play School</div>
+                      <p>Logo</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
