--- a/index.html
+++ b/index.html
@@ -226,6 +226,25 @@
 <div class="section" id="projects">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Projects</div>
+	  <!-- Card Started------------------>
+	<div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>March 2019</p>
+            <div class="h5">Home Automation<br>(Android App)</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Sahutronics Home Automtion Android App</div>
+            <p>This app can control your devices using Bluetooth Connection. This app is currently in developing Stage, more features like set time to turn ON/OFF devices, Connecting App with Internet to control device from anywhere in world, and many more......</p>
+          </div>
+        </div>
+      </div>
+    </div>	  
+	  
+	  <!-- Card End---------------------->
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
