--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="card-body">
             <div class="h5">Intern at Raman Classes</div>
             <p>
-            	Course Developer at Raman Classes.
+            	Developed Python course content ( Beginners ) for Raman Classes.
             </p>
           </div>
         </div>
