--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <div><br></div>
             <div ><b>Affilated University:</b> Uttarakhand Technical University</div>
             <div ><b>Subjects of Interest :</b> Data Structures, Design and Analysis of Algorithms, Operating Systems, Programming</div>
-            <div ><b>First Year Percentage :</b> 72% </div>
+            <div ><b>Percentage :</b> 75.6% (till second year)</div>
             
             <p></p>
           </div>
