--- a/index.html
+++ b/index.html
@@ -226,6 +226,22 @@
 <div class="section" id="projects">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Projects</div>
+	<div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>March 2019</p>
+            <div class="h5">Voice Assisted Train Enquiry</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Train Enquiry</div>
+            <p>An Amazon Alexa Skill, with the help of this skill user can enquire about the live running status of his train by using voice only.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 	  <!-- Card Started------------------>
 	<div class="card">
       <div class="row">
