--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 	    <div class="row">
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><center><video height="400" autoplay>
+                  <figure class="cc-effect"><center><video height="400" controls loop autoplay>
         <source src="VirtualTT.mp4" type="video/mp4">
         
                     Your browser does not support the video tag.
@@ -631,7 +631,7 @@
             </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#Photography">
-                  <figure class="cc-effect"><center><video height="400" autoplay>
+                  <figure class="cc-effect"><center><video height="400" controls loop autoplay>
         <source src="DuckHunt.mp4" type="video/mp4">
         
       Your browser does not support the video tag.
