--- a/index.html
+++ b/index.html
@@ -192,6 +192,42 @@
                   <div class="row">
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
+                           <p>Feb 2021</p>
+                           <div class="h5">Remote Desk</div>
+                        </div>
+                     </div>
+                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                           <div class="h5">Remote Desk</div>
+                           <p>Developed a remote screen sharing application using Socket Programming with limited remote control functionality.</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- Card End---------------------->
+               <!-- Card Started------------------>
+               <div class="card">
+                  <div class="row">
+                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-experience-header">
+                           <p>Feb 2021</p>
+                           <div class="h5">FastDM</div>
+                        </div>
+                     </div>
+                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                           <div class="h5">Fast Download Manager</div>
+                           <p>Developed a Multi-Threaded Download manager with Resume support and segmented download feature.</p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- Card End---------------------->
+               <!-- Card Started------------------>
+               <div class="card">
+                  <div class="row">
+                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-experience-header">
                            <p>July 2020</p>
                            <div class="h5">Virtual Table Tennis</div>
                         </div>
