--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>Feb 2021</p>
-                           <div class="h5">Remote Desk</div>
+                           <div class="h5">Remote Desk  <a class="btn btn-default btn-round btn-lg btn-icon " href="https://github.com/peeyush1999/RemoteDesk"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a> </div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
