--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Remote Desk &nbsp; &nbsp; <a class="btn btn-default btn-round btn-lg btn-icon " href="https://github.com/peeyush1999/RemoteDesk"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
+                           <div class="h5">Remote Desk &nbsp; &nbsp; <a href="https://github.com/peeyush1999/RemoteDesk"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
                            <p>Developed a remote screen sharing application using Socket Programming with limited remote control functionality.</p>
                         </div>
                      </div>
@@ -216,7 +216,7 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Fast Download Manager</div>
+                           <div class="h5">Fast Download Manager &nbsp; &nbsp; <a href="https://github.com/peeyush1999/FastDM"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
                            <p>Developed a Multi-Threaded Download manager with Resume support and segmented download feature.</p>
                         </div>
                      </div>
@@ -229,12 +229,12 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>July 2020</p>
-                           <div class="h5">Virtual Table Tennis</div>
+                           <div class="h5">Virtual Table Tennis </div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Experience Virtual Table Tennis using OpenCV and Python</div>
+                           <div class="h5">Experience Virtual Table Tennis using OpenCV and Python &nbsp; &nbsp; <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/Table%20tennis.py"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
                            <p>Developed a gesture based approch to play Table Tennis</p>
                         </div>
                      </div>
@@ -247,7 +247,7 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>July 2020</p>
-                           <div class="h5">Invisibility Cloak </div>
+                           <div class="h5">Invisibility Cloak &nbsp; &nbsp; <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/harry.py"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -265,7 +265,7 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>July 2020</p>
-                           <div class="h5">Duck-Hunt Game</div>
+                           <div class="h5">Duck-Hunt Game &nbsp; &nbsp; <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/DUCKKHUNT.py"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -282,12 +282,12 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>April 2020</p>
-                           <div class="h5">Travis Bot</div>
+                           <div class="h5">Travis Bot </div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Travis : Your Personnel Travel Guide</div>
+                           <div class="h5">Travis : Your Personnel Travel Guide &nbsp; &nbsp;  <a href="https://www.amazon.in/SahuTronics-Travis/dp/B0899KDMF2"><i class="fa devicon-amazon-plain fa-2x " aria-hidden="true"></i></a></div>
                            <p>Developed an intelligent Python based chatbot specifically for Tourism domain. It is hosted on Amazon Alexa Skill Store. <br><a href="https://www.amazon.in/SahuTronics-Travis/dp/B0899KDMF2/ref=sr_1_1?dchild=1&keywords=travis&qid=1596617757&s=digital-skills&sr=1-1"> Link </a>  </p>
                         </div>
                      </div>
@@ -303,7 +303,7 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Train Enquiry</div>
+                           <div class="h5">Train Enquiry &nbsp; &nbsp;  <a href="https://www.amazon.in/SahuTronics-Train-Uncle/dp/B084JJR4HZ/ref=sr_1_1?dchild=1&keywords=train+uncle&qid=1617006686&s=digital-skills&sr=1-1"><i class="fa devicon-amazon-plain fa-2x " aria-hidden="true"></i></a></div>
                            <p>An Amazon Alexa Skill, with the help of this skill user can enquire about the live running status of his train by using voice only.<br><a href="https://www.amazon.in/SahuTronics-Train-Uncle/dp/B084JJR4HZ/ref=sr_1_1?dchild=1&keywords=train+uncle&qid=1596695643&s=digital-skills&sr=1-1"> Link </a></p>
                         </div>
                      </div>
